// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnswersTable matches tutor teacher-preview snapshot 1`] = `
<div
  className="answers-table"
>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled"
      role="region"
    >
      <div
        className="correct-incorrect"
      />
      <label
        className="answer-label"
        htmlFor="1-option-0"
        onKeyPress={[Function]}
      >
        <span
          className="answer-letter-wrapper"
        >
          <button
            aria-label="Choice a:"
            className="answer-letter"
            data-test-id="answer-choice-a"
            disabled={true}
          >
            a
          </button>
        </span>
        <div
          className="answer-answer"
        >
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<ol>
  <li>matter is moving at speeds of less than roughly 1% the speed of light,</li>
  <li>objects are too small to be seen with the naked eye, and</li>
  <li>there is the involvement of only a weak gravitational field</li>
</ol>
",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled"
      role="region"
    >
      <div
        className="correct-incorrect"
      />
      <label
        className="answer-label"
        htmlFor="1-option-1"
        onKeyPress={[Function]}
      >
        <span
          className="answer-letter-wrapper"
        >
          <button
            aria-label="Choice b:"
            className="answer-letter"
            data-test-id="answer-choice-b"
            disabled={true}
          >
            b
          </button>
        </span>
        <div
          className="answer-answer"
        >
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<ol>
  <li>matter is moving at speeds greater than roughly 1% the speed of light,</li>
  <li>objects are large enough to be seen with the naked eye, and</li>
  <li>there is the involvement of a strong gravitational field</li>
</ol>
",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
</div>
`;

exports[`AnswersTable renders correct answer feedback 1`] = `
<div
  className="answers-table"
>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled answer-checked answer-correct"
      role="region"
    >
      <label
        className="answer-label"
        htmlFor="1-option-0"
      >
        <span
          className="answer-letter-wrapper"
        >
          <button
            aria-label="Selected Choice a(Correct Answer):"
            className="answer-letter"
            data-test-id="answer-choice-a"
            disabled={true}
          >
            a
          </button>
        </span>
        <div
          className="answer-answer"
        >
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "True",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
  <aside
    className="question-feedback bottom"
  >
    <div
      aria-label="Answer Feedback"
      className="arrow"
    />
    <aside>
      <div
        className="question-feedback-content has-html"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Feedback",
          }
        }
      />
    </aside>
  </aside>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled"
      role="region"
    >
      <label
        className="answer-label"
        htmlFor="1-option-1"
      >
        <span
          className="answer-letter-wrapper"
        >
          <button
            aria-label="Choice b(Incorrect Answer):"
            className="answer-letter"
            data-test-id="answer-choice-b"
            disabled={true}
          >
            b
          </button>
        </span>
        <div
          className="answer-answer"
        >
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "False",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
</div>
`;

exports[`AnswersTable renders incorrect answer feedback 1`] = `
<div
  className="answers-table"
>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled answer-checked answer-incorrect"
      role="region"
    >
      <input
        checked={true}
        className="answer-input-box"
        disabled={true}
        id="1-option-0"
        name="1-options"
        onChange={[MockFunction]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-0"
      >
        <span
          className="answer-letter-wrapper"
        >
          <button
            aria-label="Selected Choice a:"
            className="answer-letter"
            data-test-id="answer-choice-a"
            disabled={true}
            onClick={[MockFunction]}
          >
            a
          </button>
        </span>
        <div
          className="answer-answer"
        >
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "True",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
  <aside
    className="question-feedback bottom"
  >
    <div
      aria-label="Answer Feedback"
      className="arrow"
    />
    <aside>
      <div
        className="question-feedback-content has-html"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Feedback",
          }
        }
      />
    </aside>
  </aside>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled answer-correct"
      role="region"
    >
      <input
        checked={false}
        className="answer-input-box"
        disabled={true}
        id="1-option-1"
        name="1-options"
        onChange={[MockFunction]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-1"
      >
        <span
          className="answer-letter-wrapper"
        >
          <button
            aria-label="Choice b:"
            className="answer-letter"
            data-test-id="answer-choice-b"
            disabled={true}
            onClick={[MockFunction]}
          >
            b
          </button>
        </span>
        <div
          className="answer-answer"
        >
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "False",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
</div>
`;

exports[`AnswersTable sorts by given ID order 1`] = `
<div
  className="answers-table"
>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled"
      role="region"
    >
      <input
        checked={false}
        className="answer-input-box"
        disabled={true}
        id="1-option-0"
        name="1-options"
        onChange={[MockFunction]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-0"
      >
        <span
          className="answer-letter-wrapper"
        >
          <button
            aria-label="Choice a:"
            className="answer-letter"
            data-test-id="answer-choice-a"
            disabled={true}
            onClick={[MockFunction]}
          >
            a
          </button>
        </span>
        <div
          className="answer-answer"
        >
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "False",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
  <div
    className="openstax-answer"
  >
    <section
      className="answers-answer disabled"
      role="region"
    >
      <input
        checked={false}
        className="answer-input-box"
        disabled={true}
        id="1-option-1"
        name="1-options"
        onChange={[MockFunction]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-1"
      >
        <span
          className="answer-letter-wrapper"
        >
          <button
            aria-label="Choice b:"
            className="answer-letter"
            data-test-id="answer-choice-b"
            disabled={true}
            onClick={[MockFunction]}
          >
            b
          </button>
        </span>
        <div
          className="answer-answer"
        >
          <span
            className="answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "True",
              }
            }
          />
        </div>
      </label>
    </section>
  </div>
</div>
`;
